# pelican-jupyter

./: Makefile  README.md  pyproject.toml  requirements.txt  technical_documentation.md
pelican_jupyter/: __init__.py  core.py  liquid.py  markup.py
pelican_jupyter/tests/pelican/liquid/: pelicanconf.py
pelican_jupyter/tests/pelican/liquid/content/: liquid-tag.ipynb
tests/: test_base_usage.py
tests/pelican/markup-incell/content/: md-info-in-cell.ipynb
tests/pelican/markup-nbdata/content/: nbdata-file.ipynb
